--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
 <h1>Index page</h1>
-<p>Index page hosted on github.</p>
+<p>Index page hosted on github. Additional information still to come.</p>
 </body>
 
 </html>
